# DLS

./: CMakeLists.txt  CMakePresets.json  DLS.sln  README.md  main.cpp  todo
DLS/: DLS.cpp  DLS.sln  DLS.vcxproj  DLS.vcxproj.filters  DeDe.sln  DeDe.vcxproj  DeDe.vcxproj.filters  animation.hpp  appearance.hpp  asset.hpp  camera.hpp  collision.hpp  collision_system.hpp  debug.cpp  debug.hpp  emitter.hpp  engine.cpp  engine.hpp  engine_system.hpp  engine_system_manager.hpp  event_func.hpp  fixed.hpp  graph.hpp  graph_point.hpp  gui.hpp  gui_drawable.hpp  input.hpp  input_callback_context.hpp  input_system.hpp  instance.hpp  interpolatable.hpp  keyframe_data.hpp  layout.hpp  main.cpp  mesh.hpp  module.cpp  module.hpp  module_system.hpp  module_system_manager.hpp  object.hpp  (+36 more)
DLS/assets/: character_stats.property_group.asset  entity1.entity.asset  project1.project.asset  save_data.data  scene1.scene.asset
DLS/include/: animation.hpp  appearance.hpp  asset.hpp  audio.hpp  camera.hpp  clip.hpp  collision.hpp  collision_callback_context.hpp  color.hpp  emitter.hpp  engine_system.hpp  entity.hpp  event.hpp  event_func.hpp  fixed.hpp  function.hpp  global_data.hpp  graph.hpp  graph_point.hpp  input.hpp  input_button.hpp  input_event_group.hpp  instance.hpp  keyframe_data.hpp  layout.hpp  mask.hpp  material.hpp  material_settings.hpp  math.hpp  matrix.hpp  mesh.hpp  module.hpp  module_system.hpp  optional.hpp  physics.hpp  physics_system.hpp  polygon.hpp  processor.hpp  project.hpp  (+38 more)
assets/: cube.msh  fragment.frag  quad.msh  tri.msh  vertex.vert
src/: game.cpp  glad.cpp
(+307 files in other folders)
